versioned_docs/version-3.12/scalardb-sql/scalardb-sql-status-codes.mdx
# ScalarDB SQL Error Codes

This page provides a list of error codes in ScalarDB SQL.

## Error code classes and descriptions

| Class       | Description                                              |
|:------------|:---------------------------------------------------------|
| `SQL-1xxxx` | Errors for the user error category.                      |

## `SQL-1xxxx` status codes

### `SQL-10000`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `SQL-10001`

**Message**

```markdown
The table does not exist. Table: %s
```

### `SQL-10002`

**Message**

```markdown
The column %s does not exist
```

### `SQL-10003`

**Message**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `SQL-10004`

**Message**

```markdown
The column index is out of bounds. Index: %d; Size: %d
```

### `SQL-10005`

**Message**

```markdown
A positional bind marker is not allowed when binding named values
```

### `SQL-10006`

**Message**

```markdown
A named bind marker is not allowed when binding positional values
```

### `SQL-10007`

**Message**

```markdown
Cannot convert BLOB values to SQL. Please use a bind marker for a BLOB value and bind it separately
```

### `SQL-10008`

**Message**

```markdown
No namespace name has been specified. Set a default namespace name, or explicitly specify a namespace name
```

### `SQL-10009`

**Message**

```markdown
Zero bytes may not occur in string parameters
```

### `SQL-10010`

**Message**

```markdown
Mixing positional values and named values is not allowed
```

### `SQL-10011`

**Message**

```markdown
Preparing a transaction is supported only in two-phase commit transaction mode
```

### `SQL-10012`

**Message**

```markdown
Validating a transaction is supported only in two-phase commit transaction mode
```

### `SQL-10013`

**Message**

```markdown
The previous transaction is still in progress. Commit, roll back, or suspend the previous transaction first
```

### `SQL-10014`

**Message**

```markdown
This SQL session has already been closed
```

### `SQL-10015`

**Message**

```markdown
A transaction has not begun
```

### `SQL-10016`

**Message**

```markdown
The type %s is not supported
```

### `SQL-10017`

**Message**

```markdown
No connection mode implementations are found. Please add a connection mode implementation to the classpath
```

### `SQL-10018`

**Message**

```markdown
The connection mode is not specified, but multiple connection mode implementations are found. Specify one of the following connection modes: %s
```

### `SQL-10019`

**Message**

```markdown
The connection mode '%s' is not found. Specify one of the following connection modes: %s
```

### `SQL-10020`

**Message**

```markdown
Access denied: You need the %s privilege for the namespace %s to execute this operation
```

### `SQL-10021`

**Message**

```markdown
Access denied: You need the %s privilege for the table %s to execute this operation
```

### `SQL-10022`

**Message**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege for the table %s
```

### `SQL-10023`

**Message**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege for the namespace %s
```

### `SQL-10024`

**Message**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege for the table %s
```

### `SQL-10025`

**Message**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege for the namespace %s
```

### `SQL-10026`

**Message**

```markdown
Syntax error. Line %d:%d %s
```

### `SQL-10027`

**Message**

```markdown
Syntax error. Multiple PRIMARY KEYs specified (exactly one required)
```

### `SQL-10028`

**Message**

```markdown
Cannot grant the INSERT privilege if the user doesn't have the UPDATE privilege
```

### `SQL-10029`

**Message**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the INSERT privilege
```

### `SQL-10030`

**Message**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the SELECT privilege
```

### `SQL-10031`

**Message**

```markdown
Cannot grant the DELETE privilege if the user doesn't have the SELECT privilege
```

### `SQL-10032`

**Message**

```markdown
Cannot revoke the SELECT privilege if the user has the UPDATE privilege
```

### `SQL-10033`

**Message**

```markdown
Cannot revoke the SELECT privilege if the user has the DELETE privilege
```

### `SQL-10034`

**Message**

```markdown
Cannot revoke the INSERT privilege if the user has the UPDATE privilege
```

### `SQL-10035`

**Message**

```markdown
Cannot revoke the UPDATE privilege if the user has the INSERT privilege
```

### `SQL-10036`

**Message**

```markdown
A non-clustering-key column is specified in the CLUSTERING ORDER directive. Column: %s
```

### `SQL-10037`

**Message**

```markdown
The order of the columns in the CLUSTERING ORDER directive must match the order for the clustering key (%s must appear before %s)
```

### `SQL-10038`

**Message**

```markdown
The CLUSTERING ORDER is missing for the column %s
```

### `SQL-10039`

**Message**

```markdown
Empty SQL is specified
```

### `SQL-10040`

**Message**

```markdown
Multiple SQLs are not allowed
```

### `SQL-10041`

**Message**

```markdown
The column %s is ambiguous
```

### `SQL-10042`

**Message**

```markdown
The column %s cannot be specified in the %s clause. Only the columns in the table %s can be specified in the %s clause
```

### `SQL-10043`

**Message**

```markdown
An unbound bind marker is still in the escape character of the LIKE predicate for the column %s
```

### `SQL-10044`

**Message**

```markdown
The escape character must be a TEXT value for the LIKE predicate for the column %s
```

### `SQL-10045`

**Message**

```markdown
The value of the predicate must not be null unless the operator is 'IS NULL' or 'IS NOT NULL'. Predicate: %s
```

### `SQL-10046`

**Message**

```markdown
An unbound bind marker is still in the LIMIT clause
```

### `SQL-10047`

**Message**

```markdown
The LIMIT must be an INT value
```

### `SQL-10048`

**Message**

```markdown
Unmatched column names or values
```

### `SQL-10049`

**Message**

```markdown
The column %s is specified twice
```

### `SQL-10050`

**Message**

```markdown
All primary key columns must be specified in the INSERT or UPSERT statement
```

### `SQL-10051`

**Message**

```markdown
An unbound bind marker is still in the value of the column %s
```

### `SQL-10052`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a boolean value (BOOLEAN) is specified
```

### `SQL-10053`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a decimal number (INT or BIGINT) is specified
```

### `SQL-10054`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a floating point number (FLOAT or DOUBLE) is specified
```

### `SQL-10055`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a string (TEXT) is specified
```

### `SQL-10056`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BOOLEAN value is specified
```

### `SQL-10057`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but an INT value is specified
```

### `SQL-10058`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BIGINT value is specified
```

### `SQL-10059`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a FLOAT value is specified
```

### `SQL-10060`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DOUBLE value is specified
```

### `SQL-10061`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TEXT value is specified
```

### `SQL-10062`

**Message**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BLOB value is specified
```

### `SQL-10063`

**Message**

```markdown
RIGHT OUTER JOIN can only be specified as the first join
```

### `SQL-10064`

**Message**

```markdown
The JOIN predicate is not specified properly. Predicate: %s
```

### `SQL-10065`

**Message**

```markdown
The data types of the columns in the JOIN predicate do not match. Predicate: %s
```

### `SQL-10066`

**Message**

```markdown
The column %s is specified twice in the JOIN predicates. Predicates: %s
```

### `SQL-10067`

**Message**

```markdown
Either all primary key columns or an indexed column for the table %s must be specified in the JOIN predicates. Predicates: %s
```

